k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
spec:
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
      - name: orchestrator
        image: mruntime/orchestrator
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orm
spec:
  selector:
    matchLabels:
      app: orm
  template:
    metadata:
      labels:
        app: orm
    spec:
      containers:
      - name: orm
        image: mruntime/orm
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: "postgres:alpine"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-volume-mount
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: mart
    labels:
        app: mart
spec:
    replicas: 2
    selector:
        matchLabels:
            app: mart
    template:
        metadata:
          name: mart
          labels:
            name: mart
            app: mart
        spec:
            containers:
              - name: verdict
                image: mruntime/verdict
                imagePullPolicy: IfNotPresent
                resources:
                  limits:
                    memory: "700Mi"
                    cpu: "300m"
                ports:
                  - containerPort: 8083
              - name: executor
                image: mruntime/executor
                imagePullPolicy: IfNotPresent
                resources:
                  limits:
                    memory: "700Mi"
                    cpu: "300m"
                ports:
                  - containerPort: 8082
              - name: compiler
                image: mruntime/compiler
                imagePullPolicy: IfNotPresent
                resources:
                  limits:
                    memory: "700Mi"
                    cpu: "300m"
                ports:
                  - containerPort: 8081
