k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mart
  labels:
    name: mart
spec:
  containers:
  - name: verdict
    image: mruntime/verdict
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "700Mi"
        cpu: "300m"
    ports:
      - containerPort: 8083
  - name: executor
    image: mruntime/executor
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "700Mi"
        cpu: "300m"
    ports:
      - containerPort: 8082
  - name: compiler
    image: mruntime/compiler
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "700Mi"
        cpu: "300m"
    ports:
      - containerPort: 8081
