k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app: orchestrator
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orm
spec:
  selector:
    app: orm
  ports:
  - port: 8084
    targetPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: mart
spec:
  selector:
    name: mart
  ports:
  - port: 8083
    targetPort: 8083
